@@ -41,7 +41,9 @@ target_link_libraries(microdosimetry ${Geant4_LIBRARIES} )
 #
 file(GLOB MAC_FILES ${PROJECT_SOURCE_DIR}/*.mac 
                     ${PROJECT_SOURCE_DIR}/*.in
-                    ${PROJECT_SOURCE_DIR}/plot.C)
+                    ${PROJECT_SOURCE_DIR}/plot.C
+                    ${PROJECT_SOURCE_DIR}/README
+                    )
 
 foreach(_script ${MAC_FILES})
   configure_file(
